--- a/css/layout.css
+++ b/css/layout.css
@@ -25,3 +25,27 @@
 /* Posititoning Classes */
 
 
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.col-1{
+  float:left;
+  width: 32%;
+}
+
+.col-2{
+  float:left;
+  width: 66%;
+  
+}
+
+
+[class*="col-"] {
+  margin-left: 2%;
+}
+
+.first {
+  margin-left: 0%;
+}
